# gem_art_creator

./: Cargo.toml  New Site Instructions.txt  current_html.txt  error.txt  generate_gem_art_preview_explanation.md  index.html  instructions.txt  list_of_DMC_colours.csv  manifest.json  optimize_plan.md  plan.md  test_plan.md  update_docs.bat  upload_flow.md  watch.bat
benches/: my_benchmark.rs
docs/: manifest.json
docs/pkg/: yew_project.d.ts  yew_project.js  yew_project_bg.wasm  yew_project_bg.wasm.d.ts
docs/static/: style.css  style.css.map  style.scss
src/: components.rs  dmc_colors.rs  dmc_colors_precomputed.json  generate_color_map.rs  image_processing.rs  lib.rs  models.rs  utils.rs
src/components/: color_selection_panel.rs  file_input_buttons.rs  gem_counts_display.rs  help_modal.rs  mod.rs  settings_panel.rs
static/: style.css  style.css.map  style.scss
test_images/: gem_counts.txt
tests/: integration_tests.rs
