[package]
name = "yew_project"
version = "0.1.0"
edition = "2021"
description = "A simple Yew-based flashcard app"

[dependencies]
console_log = "0.2"
gloo-console = "0.2"
gloo-events = "0.2"
gloo-net = "0.2"
gloo-storage = "0.2"
indexmap = { version = "2", features = ["serde"] }
js-sys = "0.3"
log = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Element", "EventTarget", "TouchEvent", "HtmlElement", "Touch", "DomTokenList", "Document", "FileList", "File", "FileReader", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "HtmlImageElement", "HtmlAnchorElement"] }
gloo-file = "0.3"
gloo-dialogs = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
image = "0.24"
imageproc = "0.23.0"
rusttype = "0.9.3"
base64 = "0.21"
deltae = "0.2.1"
palette = "0.7.3"
yew = { version = "0.20", features = ["csr"] }
kiddo = { version = "0.1.3", features = ["serialize"] }
rayon = "1.10.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
